deployment/talos/rahma/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-web
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-api
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: api
---
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-data
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: data
---
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-ai
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-monitoring
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: rahma-security
  labels:
    app.kubernetes.io/part-of: rahma
    rahma.serverax.io/tier: security
