deployment/talos/rahma/rahma-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rahma-api
  namespace: rahma-api
  labels:
    app.kubernetes.io/name: rahma-api
    app.kubernetes.io/part-of: rahma
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rahma-api
  ports:
    - name: http
      port: 3000
      targetPort: http
